--- a/style/main.css
+++ b/style/main.css
@@ -41,21 +41,15 @@ p {
   letter-spacing: 0.0300em;
 }
 
-.col-lg-6 h2 {
+.col-lg-6 h2, .col-lg-12 h2{
 	font-size: 160%;
 }
 
-.lft {
-	padding-left: 60px;
-	padding-right: 60px;
-}
 
-
-.rgt {
+.col-lg-6, .col-lg-12 {
   padding-left: 60px;
-  padding-right: 60px;
+  padding-right: 60px; 
 }
-
 .align-rgt {
   text-align: right;
   margin-top:60px;
@@ -107,4 +101,44 @@ form input[type="email"].ng-valid.ng-dirty {
 
 input[type="text"],input[type="email"] {
    height: 43px;
+}
+
+
+
+.example-leave-setup, .example-enter-setup {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  -ms-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+}
+ 
+.example-animate-container {
+  position:relative;
+  height:100px;
+}
+ 
+.example-animate-container > * {
+  display:block;
+  width:100%;
+  border-left:1px solid black;
+ 
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  padding:10px;
+}
+ 
+.example-enter-setup {
+  left:100%;
+}
+.example-enter-setup.example-enter-start {
+  left:0;
+}
+ 
+.example-leave-setup { }
+.example-leave-setup.example-leave-start {
+  left:-100%;
 }
