--- a/style/main.css
+++ b/style/main.css
@@ -1,58 +1,51 @@
 html, body {
     overflow-x: hidden;
-}
-
-.jumbotron{
-  
-  text-align: center;
-  color: white;
-  background: url("../assets/images/soundfluence_background.png") no-repeat center center fixed transparent;
-  height: 680px;
-  width: 100%;
-  min-height: 680px;
-
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  
-  -moz-border-radius: 0px !important;
-  -webkit-border-radius: 0px !important;
-  border-radius: 0px !important;
-}
-
-
-html, body {
     height: 100%;
     margin: 0;
     padding: 0;
     font-family: "museo-sans" !important;
 }
 
-h1, h2 {
-  font-family: "museo-sans" !important;
-  letter-spacing: 0.0550em;
-}
-
-h1 {
-	margin-top: 100px;
-	font-size: 180% !important;
-	font-family: "museo-sans" !important;
-	font-weight: 700;
-}
-
-p {
-	font-size: 95%;
-	font-weight: 500;
+.jumbotron{  
+  text-align: center;
+  color: white;
+  background: url("../assets/images/soundfluence_background.png") no-repeat center center fixed transparent;
+  height: 680px;
+  width: 100%;
+  min-height: 680px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -moz-border-radius: 0px !important;
+  -webkit-border-radius: 0px !important;
+  border-radius: 0px !important;
 }
 
 .jumbotron p {
   letter-spacing: 0.0300em;
 }
 
-.col-lg-6 h2, .col-lg-12 h2{
-	font-size: 160%;
+
+/* style for title h1 */
+h1 {
+  margin-top: 100px;
+  font-size: 180% !important;
+  font-family: "museo-sans" !important;
+  font-weight: 700;
+  letter-spacing: 0.0550em;
+}
+
+/* size and weight for subtitle*/
+p {
+  font-size: 95%;
+  font-weight: 500;
+}
+
+
+
+h1, h2 {
+  font-family: "museo-sans" !important;
 }
 
 
@@ -60,6 +53,11 @@ p {
   padding-left: 60px;
   padding-right: 60px; 
 }
+
+.col-lg-6 h2, .col-lg-12 h2{
+	font-size: 160%;
+}
+
 .align-rgt {
   text-align: right;
   margin-top:60px;
@@ -113,5 +111,7 @@ input[type="text"],input[type="email"] {
    height: 43px;
 }
 
-
+.legal, .contact {
+  margin-top: 60px;
+}
 
